<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_margin="10dp">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
	        <RelativeLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:text="@string/routesettings_start_label"/>
	            
	        </RelativeLayout>
	        
	        <TextView android:id="@+id/routesettings_start_location"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/routesettings_start_text_text"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="10dp">
	        
	        <RelativeLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:text="@string/routesettings_end_label"/>
	            
	            <Button
	                android:id="@+id/routesettings_end_button"
	                style="@style/Button"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_alignParentEnd="true"
	                android:text="@string/routesettings_end_button_text" />
	            
	        </RelativeLayout>
	        
	        <TextView android:id="@+id/routesettings_end_location"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/routesettings_target_text_text"/>
	        
	    </LinearLayout>
	    
	</LinearLayout>
	
	<Button
	    android:id="@+id/routesettings_begin_button"
	    style="@style/Button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/routesettings_begin_button_text" />

</RelativeLayout>